# FastImputation

./: .Rprofile  .gitignore  .lintr  .pre-commit-config.yaml  .travis.yml  CLAUDE.md  FastImputation.Rproj  Notes on imputation algorithm.txt  README.md  REFACTORING.md  Test CovWithMissing.R  TestSuiteForPackage.R  create.fake.Web.data.R  create_fake_data_v2.R  create_fake_web_data.R  dumpdata.R  functions.R  pyproject.toml  testFI.R  testing_main_algorithm.R
.Rproj.user/D5FCD61E/: persistent-state
.Rproj.user/D5FCD61E/pcs/: files-pane.pper  packages-pane.pper  windowlayoutstate.pper
.Rproj.user/E1752B9B/: persistent-state
.Rproj.user/E1752B9B/pcs/: files-pane.pper  windowlayoutstate.pper
.Rproj.user/E73D8D40/: persistent-state
.Rproj.user/E73D8D40/pcs/: files-pane.pper  windowlayoutstate.pper
.claude/: settings.local.json
.github/workflows/: lint.yml
R/: FastImputation.Rproj  Test CovWithMissing.R  TestSuiteForPackage.R  create_fake_data_v2.R  create_fake_web_data.R  dumpdata.R  fake.data.rds  functions.R  rf.tsv  testFI.R  testing_main_algorithm.R
R/dev/.claude/: settings.local.json
R/dev/FastImputation/: DESCRIPTION  NAMESPACE
archive/v1.0/FastImputation/: DESCRIPTION  NAMESPACE
archive/v1.2/FastImputation/: NAMESPACE
archive/v1.3.1/FastImputation/: DESCRIPTION
archive/v2.0/FastImputation/: NAMESPACE
dev/FastImputation/: DESCRIPTION  NAMESPACE
dev/FastImputation.Rcheck/: 00install.out  FastImputation-Ex.R  FastImputation-Ex.Rout  FastImputation-Ex.timings  FastImputation-manual.tex
python/dev/: pyproject.toml
(+203 files in other folders)
